Sun Jan 21 22:40:25 2001  Jason Tishler <jt@dothill.com>

	* cygwin.din: Add export for setlogmask().
	* syslog.cc (setlogmask): New function.

Thu Jan 18 10:27:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* resource.cc (setrlimit): Support RLIMIT_NOFILE.

Wed Jan 17 23:23:12 2001  Christopher Faylor <cgf@cygnus.com>

	* syscalls.cc (setdtablesize): Call with amount to increment not total
	amount.  Return success or failure error code.

Wed Jan 17 09:47:13 2001  Christopher Faylor <cgf@cygnus.com>

	* autoload.cc (LoadDLLinitfunc): Remove debugging statement.

	* exceptions.cc (sig_handle_tty_stop): Move setting of PID_STOPPED to
	earlier in interrupt.
	((interrupt_setup): i.e., here.
	(sig_handle): Don't queue multiple SIGSTOPS.
	* fhandler.h (bg_check_types): Enumerate return value of bg_check for
	clarity.
	* signal.cc (kill_pgrp): Minor cleanup.
	* fhandler_termios.cc (fhandler_termios::bg_check): Use enumerated type
	for function return.  Don't raise signal if a signal is already queued.
	* fhandler_console.cc (fhandler_console::read): Use enumerated return
	type for bg_check.
	* select.cc: Ditto, throughout.
	* read.cc: Ditto, throughout.
	* termios.cc: Ditto, throughout.
	(_read): YA interrupt detect simplification.
	* wait.cc (wait4): Ditto.

Wed Jan 17 10:56:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* cygheap.cc (cygheap_user::~cygheap_user): Temporarily
	disable free'ing memory.

Tue Jan 16 18:01:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Initialize fh to avoid compiler warnings.

Mon Jan 15 21:07:00 2001  Christopher Faylor <cgf@cygnus.com>

	* wait.cc (wait4): Rename variable for consistency.  Allow restartable
	signal behavior.

Mon Jan 15 23:15:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Add more parameter checking. Change error output
	in case of EINVAL. Treat mmapping /dev/zero like MAP_ANONYMOUS.

Mon Jan 15 20:34:00 2001  Corinna Vinschen <corinna@vinschen.de>
